# vgi-mask

./: .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  Makefile  README.md  docker-entrypoint.sh
.github/: dependabot.yml
.github/workflows/: ci.yml  docker-publish.yml  release.yml
ci/: README.md  run-integration.sh
crates/mask-wasm/: Cargo.toml
crates/mask-wasm/src/: lib.rs
crates/mask-worker/: Cargo.toml
crates/mask-worker/src/: arrow_io.rs  lib.rs  main.rs  mask.rs  meta.rs
crates/mask-worker/src/scalar/: fpe.rs  mod.rs  redact.rs  token.rs  version.rs
crates/mask-worker/tests/: roundtrip.rs
test/sql/: fpe.test  mask.test
wasm/: build.sh
