[workspace]
resolver = "2"
members = ["crates/mask-worker", "crates/mask-wasm"]
# mask-wasm only makes sense for wasm32-unknown-emscripten (it is a staticlib
# whose ring ops are supplied by emcc's --js-library), so keep it out of the
# default set: bare `cargo build` / `test` / `clippy` stay native-only and
# unchanged. Build it explicitly with `wasm/build.sh` or `-p mask-wasm`.
default-members = ["crates/mask-worker"]

[workspace.package]
version = "0.1.1"
edition = "2021"
rust-version = "1.97"
license = "MIT"
authors = ["Query Farm LLC <hello@query.farm>"]
repository = "https://github.com/Query-farm/vgi-mask"

[workspace.dependencies]
# VGI Rust SDK (worker side). 0.24 provides the wasm `vgi::wasm_worker!` macro
# used by mask-wasm; requires rustc 1.97 (see rust-version above). Base
# (feature-less) so each target can opt in: the native build takes the SDK's real
# defaults (`sqlite` + `transport-http`), while the wasm build must NOT —
# tokio/mio/axum and bundled SQLite do not compile for wasm32, and the browser
# transport serves over a byte channel rather than HTTP. Features are additive,
# and the two are behind mutually-exclusive target cfgs.
vgi = { version = "0.24", default-features = false }
vgi-rpc = { version = "0.16", default-features = false, features = ["macros"] }
arrow-array = "59"
arrow-buffer = "59"
arrow-schema = "59"

# Cryptography. All permissively licensed (MIT OR Apache-2.0):
#   fpe   — NIST SP 800-38G FF1 format-preserving encryption (str4d/fpe)
#   aes   — AES-256 block cipher used as FF1's round function
#   sha2  — SHA-256, used to derive a fixed 256-bit AES key from the key string
#   hmac  — HMAC-SHA-256, used for deterministic tokenization
#   subtle / hex — constant-time compare helpers / hex encoding
fpe = "0.6"
aes = "0.8"
sha2 = "0.11"
hmac = "0.13"
hex = "0.4"

[profile.release]
opt-level = 2
