[package]
name = "mask-worker"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "VGI worker bringing format-preserving encryption, deterministic tokenization, and partial redaction of sensitive values to DuckDB over Apache Arrow"

[lib]
name = "mask_worker"
path = "src/lib.rs"

[[bin]]
name = "mask-worker"
path = "src/main.rs"

[dependencies]
arrow-array.workspace = true
arrow-buffer.workspace = true
arrow-schema.workspace = true
fpe.workspace = true
aes.workspace = true
sha2.workspace = true
hmac.workspace = true
hex.workspace = true
log = "0.4"

# --- Native ---------------------------------------------------------------
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
# The SDK's real default features — unchanged from before the wasm split.
vgi = { workspace = true, features = ["sqlite", "transport-http"] }
vgi-rpc = { workspace = true, features = ["http"] }
env_logger = "0.11"

# --- wasm32 ---------------------------------------------------------------
[target.'cfg(target_arch = "wasm32")'.dependencies]
# No sqlite (C) and no HTTP transport (tokio/mio/axum); the bincode stream codec
# is what the SAB byte-channel transport needs.
vgi = { workspace = true }
vgi-rpc = { workspace = true, features = ["stream-codec"] }
